--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<pre>
 You wake up in a room. Its pitch black. You hear a buzz, like there is static. You eyes start to adjust and you notice that you are not alone in this small room. What would you like to do.
 Your options are: Investigate other person, search room, check inventory
 Investigate other person: He seems as if he is a thief, ragged clothing, cuts and bruises, no shoes.
