--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<pre>
 You wake up in a room. Its pitch black. You hear a buzz, like there is static. You eyes start to adjust and you notice that you are not alone in this small room. What would you like to do.
 Your options are: Investigate other person, search room, check inventory
 Investigate other person: He seems as if he is a thief, ragged clothing, cuts and bruises, no shoes.
 Your options are: Investigate closer, Search room, check inventory, Wake him up
-Investigate closer: On further inspection you notice he has a pouch. In the pouch you see a small potion, a light dagger, and 40 GP
+Investigate closer: On further inspection you notice he has a pouch. In the pouch you see a small potion, a light dagger, and 40 GS
 Your options are: Take loot, leave him alone, kill him (if he has checked his inventory), Wake him up.
 Kill him: You kill him and take his loot.
 Wake him up: You wake him up. His eyes are groggy, but once he sees you he looks terrified. “Who are you?! Where are we?!” he says. (Roll D20 plus charisma, 1 - 10 = Fail, 11 - 20 = Success)
@@ -15,10 +14,11 @@ Investigate Box: You inspect the box and find that it is a dvd player. It has a 
 Play the disk: go to next page
 Check inventory: You check your inventory, (dependant on class) YOU MAY NOW CHOOSE YOUR CLASS
 Your options are: Smarts, Strength, Stealth
-Smarts: When you check your inventory you find 50 GP. When you dig into the deeper pockets you find an almost broken wooden staff and a book. The book is locked up with unbreakable chains and no lock pad. It confuses you.
-Strength: When you check your inventory you find 25 GP. When searching more you get annoyed and start to shake your bag upside-down to get everything out. When you are done you find a sharpened short sword made of bronze. It looks flimsy and as if it will break easily. You also find cloth gloves, you put them on. (+1 strength)
-Stealth: When you check your inventory you find 60 GP. You search more and find (Role D6 dice, 1 - 3 = short bow, 4 - 6 = short dagger), (if got bow, roll two D6 again for how many arrows)
-	You play the disk. The TV turns on and starts to play the disk. It starts off black but then shows a finger hitting the lens. He clears his throat. He appears to be a child. He seems to be looking at you directly. He speaks, “Hi and welcome to the first floor of my game. This is the first challenge as well so good luck. To put it simply for why you are here, because I know you all are confused, you signed up for a game a while ago. You were chosen out of the many others for being the best of the best in your area. Now there is a catch. If you die in this game, you die in real life. There is no other choice. We have been taking care of you in this chamber while you were asleep making sure that you all stay alive. I hope all 5 of you are still alive.” You look around the room and you do not see any dead bodies only Jake. You are a little confused. The TV continues, “You can count me as your god. At all times I will be surveying you. Now onto the puzzle.” There is a loud metallic screech. “ Once this video ends the room will be filled up with poisonous gas. You all will have ONE AND A HALF MINUTES to find the key to get out. Just know its not always what you think. Good luck, and try not to die out there. Bye bye…” The TV fades to black and gas starts filling the room. The timer begins, NOW.
+Smarts: When you check your inventory you find 50 GS. When you dig into the deeper pockets you find an almost broken wooden staff and a book. The book is locked up with unbreakable chains and no lock pad. It confuses you.
+Strength: When you check your inventory you find 25 GS. When searching more you get annoyed and start to shake your bag upside-down to get everything out. When you are done you find a sharpened short sword made of bronze. It looks flimsy and as if it will break easily. You also find cloth gloves, you put them on. (+1 strength)
+Stealth: When you check your inventory you find 60 GS. You search more and find (Role D6 dice, 1 - 3 = short bow, 4 - 6 = short dagger), (if got bow, roll two D6 again for how many arrows)
+
+You play the disk. The TV turns on and starts to play the disk. It starts off black but then shows a finger hitting the lens. He clears his throat. He appears to be a child. He seems to be looking at you directly. He speaks, “Hi and welcome to the first floor of my game. This is the first challenge as well so good luck. To put it simply for why you are here, because I know you all are confused, you signed up for a game a while ago. You were chosen out of the many others for being the best of the best in your area. Now there is a catch. If you die in this game, you die in real life. There is no other choice. We have been taking care of you in this chamber while you were asleep making sure that you all stay alive. I hope all 5 of you are still alive.” You look around the room and you do not see any dead bodies only Jake. You are a little confused. The TV continues, “You can count me as your god. At all times I will be surveying you. Now onto the puzzle.” There is a loud metallic screech. “ Once this video ends the room will be filled up with poisonous gas. You all will have ONE AND A HALF MINUTES to find the key to get out. Just know its not always what you think. Good luck, and try not to die out there. Bye bye…” The TV fades to black and gas starts filling the room. The timer begins, NOW.
 
 Correct solution:
 Check the 1st hole in the wall with Jake to grab the note
@@ -35,7 +35,7 @@ IF THE PLAYERS FAIL THEN RESTART FROM THE BEGINNING
 Puzzle One: COMPLETE
 REWARDS
 20 XP
-10 GP
+10 GS
 FROM NOW ON ALL DECISIONS MUST BE MADE IN 10 SECONDS AND ARE FINAL!!!
 
 
